cmake_minimum_required(VERSION 3.10)
project(primer_ch8)

set(CMAKE_CXX_STANDARD 11)

add_executable(primer_ch8 main.cpp)
# add_executable(primer_ch8 main1.cpp)
# add_executable(primer_ch8 main2.cpp)
# add_executable(primer_ch8 main3-ex1.cpp)
# add_executable(primer_ch8 main4.cpp)
# add_executable(primer_ch8 main5.cpp)
# add_executable(primer_ch8 main6.cpp)